Fix video size and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,11 @@ body {
   height: 100%;
   z-index: -1;
   opacity: 0.2; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden; }
 
 .btn:link, .btn:visited {
   text-decoration: none;
