--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -7,5 +7,10 @@
   z-index: -1;
   opacity: 0.2;
 
-  
+  &__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+  }
 }
